# multiflexi-ansible-collection

./: .gitignore  .isort.cfg  AGENTS.md  CHANGELOG.rst  LICENSE  Makefile  Makefile.galaxy  README.md  WARP.md  galaxy.yml  pyproject.toml  test-requirements.txt
.github/: copilot-instructions.md
.github/workflows/: galaxy-release.yml  release.yml
changelogs/fragments/: cli-schema-update.yml  credential-module-update.yml  fix-application-deffile-runtemplate-idempotency.yml  nodered-integration.yml
debian/: README.Debian  changelog  control  copyright  cz.vitexsoftware.multiflexi_ansible_collection.metainfo.xml  multiflexi-ansible-collection.install
docs/: multiflexi-cli.json  openapi-schema.yaml
docs/docsite/: links.yml
examples/: artifact_example.yml
plugins/: README.md
plugins/filter/: hello_world.py
plugins/modules/: __init__.py  application.py  artifact.py  company.py  company_info.py  companyapp.py  credential.py  credential_type.py  crprototype.py  encryption.py  eventrule.py  eventsource.py  job.py  multiflexi_info.py  multiflexi_status.py  prune.py  queue.py  runtemplate.py  token.py  topic.py  user.py  user_company.py  user_data_erasure.py  user_role.py
roles/demo/: README.md
roles/demo/defaults/: main.yml
roles/demo/tasks/: create_app.yml  (+9 more)
roles/multiflexi_server/: README.md
roles/run/: README.md
scripts/: bootstrap_multiflexi_debian.sh
tests/: hosts.ini  local_demo.yml  test_credential_type_module.yml  test_multiflexi_api.yml  test_runtemplate_module.yml  test_topic_module.yml  test_user_module.yml
tests/unit/: test_basic.py
(+116 files in other folders)
